# redis-shopping-agent

./: .env.example  README.md  demo.ipynb  pyproject.toml
agents/: agent.py  checkpoint.py  cli.py  prompts.py  subagents.py  tools.py  utils.py
agents/seed/: concert_index.yaml  prompts.json
